# adventofcode-hs-2023

./: .gitignore  README.md  adventofcode.cabal  fetch.sh  mkday.rb
lib/AdventOfCode/: Search.hs
