cabal-version: 2.2
-- cabal 2.2 for common stanzas

name: adventofcode2023
version: 1.0
build-type: Simple

common flags
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-deriving-strategies
    -- in GHC 9.0.1, enabling -Wmissing-exported-signatures disabled stricter -Wmissing-signatures
    -- this was fixed in GHC 9.2.1, so it's safe to keep this now.
    -- (Not mentioned in release notes, but git tag --contains e1f133bf5ee30f25a94b4f3bf4d26d1a9381f0d9)
    ---Wno-missing-exported-signatures
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-monomorphism-restriction
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe

common bin
  hs-source-dirs: bin

library
  import: flags
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode
  build-depends:   base

library aocsplit
  import: flags
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode.Split
  build-depends:   base

executable 01_trebuchet
  import: bin, flags
  build-depends: base, adventofcode2023
  main-is:       01_trebuchet.hs

executable 02_cube_conundrum
  import: bin, flags
  build-depends: base, adventofcode2023, aocsplit
  main-is:       02_cube_conundrum.hs

executable 03_gear_ratios
  import: bin, flags
  build-depends: base, adventofcode2023, array, containers
  main-is:       03_gear_ratios.hs

executable 04_scratchcards
  import: bin, flags
  build-depends: base, adventofcode2023, aocsplit, containers
  main-is:       04_scratchcards.hs

executable 05_seed_fertiliser
  import: bin, flags
  build-depends: base, adventofcode2023, aocsplit
  main-is:       05_seed_fertiliser.hs

executable 06_wait_for_it
  import: bin, flags
  build-depends: base, adventofcode2023
  main-is:       06_wait_for_it.hs

executable 07_camel_cards
  import: bin, flags
  build-depends: base, adventofcode2023, containers
  main-is:       07_camel_cards.hs

executable 08_haunted_wasteland
  import: bin, flags
  build-depends: base, adventofcode2023, containers
  main-is:       08_haunted_wasteland.hs
